tests/fixtures/valid/all_fix_types.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <wpt lat="52.5200" lon="13.4050">
    <name>No GPS fix</name>
    <fix>none</fix>
  </wpt>
  <wpt lat="52.5210" lon="13.4060">
    <name>2D GPS fix</name>
    <fix>2d</fix>
  </wpt>
  <wpt lat="52.5220" lon="13.4070">
    <name>3D GPS fix</name>
    <fix>3d</fix>
  </wpt>
  <wpt lat="52.5230" lon="13.4080">
    <name>DGPS fix</name>
    <fix>dgps</fix>
  </wpt>
  <wpt lat="52.5240" lon="13.4090">
    <name>PPS fix</name>
    <fix>pps</fix>
  </wpt>
</gpx>
