tests/fixtures/invalid/gpx_10_namespace.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/0" version="1.0" creator="Test">
  <wpt lat="52.5200" lon="13.4050">
    <name>GPX 1.0 file</name>
  </wpt>
</gpx>
